# aqc-display

./: .clangd  CMakeLists.txt  Makefile  README.md
include/: pin_config.h
include/display/presets/: default.hpp
include/presets/: default.hpp
src/: CMakeLists.txt  main.cpp
src/communication/: CMakeLists.txt  communication_manager.cpp  communication_manager.hpp
src/communication/serial/: serial_manager.cpp  serial_manager.hpp
src/display/: CMakeLists.txt  config.hpp  display.cpp  display.h  display.hpp
src/display/font/: font.hpp  font_factory.cpp  font_factory.hpp  font_types.hpp
src/input/: CMakeLists.txt  input_manager.cpp  input_manager.hpp
src/input/buttons/: button.cpp  button.hpp  button_factory.cpp  button_factory.hpp
src/sensors/: CMakeLists.txt  sensor.hpp
src/sensors/scd40/: scd40.cpp  scd40.hpp
src/sensors/sps30/: sps30.cpp  sps30.hpp
src/ui/: CMakeLists.txt  colors.hpp  types.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/components/: border.hpp  drawable.cpp  drawable.hpp  rect.hpp
src/ui/components/text/: text.cpp  text.hpp
src/ui/pages/: page.cpp  page.hpp  page_factory.cpp  page_factory.hpp  page_type.hpp
src/ui/pages/components/: bounding_box.hpp  drawable.cpp  drawable.hpp  postition.hpp
src/ui/pages/components/text/: text.cpp  text.hpp
src/ui/pages/homepage/: homepage.cpp  homepage.hpp
